--- a/GMP/README
+++ b/GMP/README
@@ -4,10 +4,10 @@ Notes
 The modal indexes are allowed to be only strings containing letters - at the moment - (any other thing will result in a parsing error).
 The binding order "~" >> "/\" >> "\/" >> "<-" = "->" = "<->" is not set yet.
 
-Eronated tests (string-index) formulae:   3,7,8,9,10
+Eronated tests (string-index) formulae:   2,3,7,8,9,10
                 integer
                 bit-string                15
 
-Good tests (string-index) formulae:       1,2,4,5,6,11,12
-            integer                       13, 15
+Good tests (string-index) formulae:       0,1,2,4,5,6,11,12
+            integer                       13, 14, 15
             bit-string                    14
