added CLASS and CLASSES keywords git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8181 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -206,6 +206,8 @@
 \newcommand{\PREDS}[1][preds]{\KWC[##1]{preds}\xspace}
 \newcommand{\TYPE}[1][preds]{\KWC[##1]{type}\xspace}
 \newcommand{\TYPES}[1][preds]{\KWC[##1]{types}\xspace}
+\newcommand{\CLASS}[1][preds]{\KWC[##1]{class}\xspace}
+\newcommand{\CLASSES}[1][preds]{\KWC[##1]{classes}\xspace}
 
 %% 1. mit \KWC[preds]{} default
 %% 2. mit \KWC[KW]{}
