added FUN and FUNS keywords git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8185 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -208,6 +208,8 @@
 \newcommand{\TYPES}[1][preds]{\KWC[##1]{types}\xspace}
 \newcommand{\CLASS}[1][preds]{\KWC[##1]{class}\xspace}
 \newcommand{\CLASSES}[1][preds]{\KWC[##1]{classes}\xspace}
+\newcommand{\FUN}[1][preds]{\KWC[##1]{fun}\xspace}
+\newcommand{\FUNS}[1][preds]{\KWC[##1]{funs}\xspace}
 
 %% 1. mit \KWC[preds]{} default
 %% 2. mit \KWC[KW]{}
