Started work at parser to transform LWB formulae to our type of formulae. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8208 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/README
+++ b/GMP/README
@@ -23,3 +23,5 @@ Good tests (string-index) formulae:       0,1,2,4,5,6,11,12
             bit-string                    14
 
 Tests 16 -> 19 are for step 1 in the decidability algorithm
+
+23,24 <=> 1,2 from k_poly_n.txt
